Initialization code has been unified

--- a/Notebooks/Abstaende.ipynb
+++ b/Notebooks/Abstaende.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c794b9f1-1081-4882-a57f-7088467702c2",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,16 @@
     "        print(\"Die Geraden schneiden sich nicht.\")\n",
     "        return\n",
     "\n",
-    "    return"
+    "    return\n",
+    "\n",
+    "def Zl(Ll,ww=0):\n",
+    "    return np.array([[0,ww *Ll],[-ww*Ll,0]])\n",
+    "\n",
+    "def Zc(Cc,ww=1):\n",
+    "    return np.array([[0,-1/(ww*Cc)],[1/(ww*Cc),0]])\n",
+    "\n",
+    "def Zr(Rr,ww=0):\n",
+    "    return np.eye(2)*Rr "
    ]
   },
   {
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "fb439c70-9516-4b0e-af6f-e907807659e2",
    "metadata": {},
    "outputs": [
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "53025533-a11f-4bd1-a1ae-8a4a836abb97",
    "metadata": {},
    "outputs": [
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "844fd8f2-10f3-435e-a9b2-e66a5d2b9126",
    "metadata": {},
    "outputs": [
@@ -266,20 +275,8 @@
      "output_type": "stream",
      "text": [
       "[-40   0  42]\n",
-      "[-400    0  420]\n",
-      "[-40   0  42]\n",
       "[-400    0  420]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(58.0)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -296,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "b78151c4-92ad-4c04-82d0-824debd5bef3",
    "metadata": {},
    "outputs": [
@@ -328,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "1e39fa11-769d-4aef-8061-00b2217c21c5",
    "metadata": {},
    "outputs": [
@@ -346,7 +343,7 @@
        "np.float64(205.0)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
