--- a/Notebooks/LGS_Lösen.ipynb
+++ b/Notebooks/LGS_Lösen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "69995bc4-b0fe-4577-9772-ba0377c6ad35",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,72 @@
     "    if (verbos>10):\n",
     "        print(Aa.shape,opt.shape)\n",
     "        print('Test: ',np.matmul(Aa,opt))\n",
-    "    return opt "
+    "    return opt\n",
+    "\n",
+    "def SpiegProj(A,Pp,vv,verbos=0):\n",
+    "    # in:\n",
+    "    #  A Punkt zu spieglen\n",
+    "    #  P Aufpunkt der Geraden\n",
+    "    #  vv Richtungsvektor der Geraden\n",
+    "    kk=A-Pp\n",
+    "    nn=[[0,-1],[1,0]] @ vv\n",
+    "    hh=( kk@nn)/(nn@nn)*nn\n",
+    "    if verbos>0:\n",
+    "        print('hh',hh)\n",
+    "    As=A-hh\n",
+    "    Ass=A-2*hh\n",
+    "    if verbos>0:\n",
+    "        print('A\\'',As,'A\\'\\'',Ass)\n",
+    "    return [As,Ass]\n",
+    "\n",
+    "def distance(A, U, V, P,verbos=0):\n",
+    "    #In\n",
+    "    # A Aufpunkt auf Ebene\n",
+    "    # U Richtungsvektor 1\n",
+    "    # V Richtungsvektor 2\n",
+    "    # P Punkt ausserhalb der Ebene\n",
+    "    \n",
+    "    ap = P - A\n",
+    "    print(ap)\n",
+    "    n = np.linalg.cross(U,V)\n",
+    "    print(n)\n",
+    "    d = (ap@n)/(np.linalg.norm(n))\n",
+    "    return np.linalg.norm(d)\n",
+    "\n",
+    "def intersection(g, h):\n",
+    " \n",
+    " \n",
+    "    # Gleichungssystem g(s) = h(t)\n",
+    "    equations = [\n",
+    "        g[0] - h[0],\n",
+    "        g[1] - h[1],\n",
+    "        g[2] - h[2]\n",
+    "    ]\n",
+    " \n",
+    "    # Lösen\n",
+    "    solution = sym.solve(equations, (s, t))\n",
+    " \n",
+    "    print(\"Lösung für s und t:\", solution)\n",
+    " \n",
+    "    # Schnittpunkt berechnen (falls Lösung existiert)\n",
+    "    if solution:\n",
+    "        s_val = solution[s]\n",
+    "        point = g.subs(s, s_val)\n",
+    "        print(\"Schnittpunkt:\", point)\n",
+    "    else:\n",
+    "        print(\"Die Geraden schneiden sich nicht.\")\n",
+    "        return\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "def Zl(Ll,ww=0):\n",
+    "    return np.array([[0,ww *Ll],[-ww*Ll,0]])\n",
+    "\n",
+    "def Zc(Cc,ww=1):\n",
+    "    return np.array([[0,-1/(ww*Cc)],[1/(ww*Cc),0]])\n",
+    "\n",
+    "def Zr(Rr,ww=0):\n",
+    "    return np.eye(2)*Rr "
    ]
   },
   {
@@ -115,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0af14f1a-bbec-4ea6-a110-d499fdee4726",
    "metadata": {},
    "outputs": [],
@@ -129,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "078800c5-1c1c-4cd2-9e31-597111fab312",
    "metadata": {},
    "outputs": [
@@ -169,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "51882d8d-4b05-45fe-b407-051a5eb52e15",
    "metadata": {},
    "outputs": [],
@@ -183,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0e23114a-debc-4ab9-ad3c-26cca722f651",
    "metadata": {},
    "outputs": [
@@ -206,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d3f4d5c6-7a61-415b-998d-12fa917f4abb",
    "metadata": {},
    "outputs": [],
@@ -219,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "a18b83f3-e473-4788-869d-1b4b76f215fe",
    "metadata": {},
    "outputs": [
@@ -248,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "f6a81bc9-7d96-4b55-b091-d713f7136cce",
    "metadata": {},
    "outputs": [],
