--- a/Notebooks/Lineare_Abbildung.ipynb
+++ b/Notebooks/Lineare_Abbildung.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "58f0f4dc-e952-43bc-8a01-2cb470b85061",
    "metadata": {},
    "outputs": [],
@@ -95,12 +95,77 @@
     "    if (verbos>10):\n",
     "        print(Aa.shape,opt.shape)\n",
     "        print('Test: ',np.matmul(Aa,opt))\n",
-    "    return opt"
+    "    return opt\n",
+    "\n",
+    "def SpiegProj(A,Pp,vv,verbos=0):\n",
+    "    # in:\n",
+    "    #  A Punkt zu spieglen\n",
+    "    #  P Aufpunkt der Geraden\n",
+    "    #  vv Richtungsvektor der Geraden\n",
+    "    kk=A-Pp\n",
+    "    nn=[[0,-1],[1,0]] @ vv\n",
+    "    hh=( kk@nn)/(nn@nn)*nn\n",
+    "    if verbos>0:\n",
+    "        print('hh',hh)\n",
+    "    As=A-hh\n",
+    "    Ass=A-2*hh\n",
+    "    if verbos>0:\n",
+    "        print('A\\'',As,'A\\'\\'',Ass)\n",
+    "    return [As,Ass]\n",
+    "\n",
+    "def distance(A, U, V, P,verbos=0):\n",
+    "    #In\n",
+    "    # A Aufpunkt auf Ebene\n",
+    "    # U Richtungsvektor 1\n",
+    "    # V Richtungsvektor 2\n",
+    "    # P Punkt ausserhalb der Ebene\n",
+    "    \n",
+    "    ap = P - A\n",
+    "    print(ap)\n",
+    "    n = np.linalg.cross(U,V)\n",
+    "    print(n)\n",
+    "    d = (ap@n)/(np.linalg.norm(n))\n",
+    "    return np.linalg.norm(d)\n",
+    "\n",
+    "def intersection(g, h):\n",
+    " \n",
+    " \n",
+    "    # Gleichungssystem g(s) = h(t)\n",
+    "    equations = [\n",
+    "        g[0] - h[0],\n",
+    "        g[1] - h[1],\n",
+    "        g[2] - h[2]\n",
+    "    ]\n",
+    " \n",
+    "    # Lösen\n",
+    "    solution = sym.solve(equations, (s, t))\n",
+    " \n",
+    "    print(\"Lösung für s und t:\", solution)\n",
+    " \n",
+    "    # Schnittpunkt berechnen (falls Lösung existiert)\n",
+    "    if solution:\n",
+    "        s_val = solution[s]\n",
+    "        point = g.subs(s, s_val)\n",
+    "        print(\"Schnittpunkt:\", point)\n",
+    "    else:\n",
+    "        print(\"Die Geraden schneiden sich nicht.\")\n",
+    "        return\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "def Zl(Ll,ww=0):\n",
+    "    return np.array([[0,ww *Ll],[-ww*Ll,0]])\n",
+    "\n",
+    "def Zc(Cc,ww=1):\n",
+    "    return np.array([[0,-1/(ww*Cc)],[1/(ww*Cc),0]])\n",
+    "\n",
+    "def Zr(Rr,ww=0):\n",
+    "    return np.eye(2)*Rr "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0f32eaf7-843c-478d-b10c-385fc46c7a42",
    "metadata": {},
    "outputs": [],
@@ -125,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d984d7ab-3d1e-4282-8a82-719300f3ffef",
    "metadata": {},
    "outputs": [],
@@ -137,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d0c8aecc-d004-47b2-acf1-60e1271e3fd3",
    "metadata": {},
    "outputs": [
@@ -158,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cd9c9edd-a39e-4e21-b14e-b2a9cdd49604",
    "metadata": {},
    "outputs": [
@@ -178,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c97c1ed8-76a9-4936-a45e-5fbda05e4312",
    "metadata": {},
    "outputs": [
@@ -212,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0389acae-a9ff-40ee-ab16-9c8b839479c5",
    "metadata": {},
    "outputs": [],
@@ -223,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fd75b13f-eae3-4aca-aa6e-8fd2d9780c71",
    "metadata": {},
    "outputs": [
@@ -244,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "37316217-1271-43f2-8adc-3166ed6b6b5b",
    "metadata": {},
    "outputs": [
@@ -277,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c9937bfa-3130-466b-8697-43a223ebea73",
    "metadata": {},
    "outputs": [],
@@ -288,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fefc86e7-ac14-4075-b786-98ceab380bde",
    "metadata": {},
    "outputs": [
