--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "88dc74e2-b251-4334-b82b-04ba04368300",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,72 @@
     "    if (verbos>10):\n",
     "        print(Aa.shape,opt.shape)\n",
     "        print('Test: ',np.matmul(Aa,opt))\n",
-    "    return opt"
+    "    return opt\n",
+    "\n",
+    "def SpiegProj(A,Pp,vv,verbos=0):\n",
+    "    # in:\n",
+    "    #  A Punkt zu spieglen\n",
+    "    #  P Aufpunkt der Geraden\n",
+    "    #  vv Richtungsvektor der Geraden\n",
+    "    kk=A-Pp\n",
+    "    nn=[[0,-1],[1,0]] @ vv\n",
+    "    hh=( kk@nn)/(nn@nn)*nn\n",
+    "    if verbos>0:\n",
+    "        print('hh',hh)\n",
+    "    As=A-hh\n",
+    "    Ass=A-2*hh\n",
+    "    if verbos>0:\n",
+    "        print('A\\'',As,'A\\'\\'',Ass)\n",
+    "    return [As,Ass]\n",
+    "\n",
+    "def distance(A, U, V, P,verbos=0):\n",
+    "    #In\n",
+    "    # A Aufpunkt auf Ebene\n",
+    "    # U Richtungsvektor 1\n",
+    "    # V Richtungsvektor 2\n",
+    "    # P Punkt ausserhalb der Ebene\n",
+    "    \n",
+    "    ap = P - A\n",
+    "    print(ap)\n",
+    "    n = np.linalg.cross(U,V)\n",
+    "    print(n)\n",
+    "    d = (ap@n)/(np.linalg.norm(n))\n",
+    "    return np.linalg.norm(d)\n",
+    "\n",
+    "def intersection(g, h):\n",
+    " \n",
+    " \n",
+    "    # Gleichungssystem g(s) = h(t)\n",
+    "    equations = [\n",
+    "        g[0] - h[0],\n",
+    "        g[1] - h[1],\n",
+    "        g[2] - h[2]\n",
+    "    ]\n",
+    " \n",
+    "    # Lösen\n",
+    "    solution = sym.solve(equations, (s, t))\n",
+    " \n",
+    "    print(\"Lösung für s und t:\", solution)\n",
+    " \n",
+    "    # Schnittpunkt berechnen (falls Lösung existiert)\n",
+    "    if solution:\n",
+    "        s_val = solution[s]\n",
+    "        point = g.subs(s, s_val)\n",
+    "        print(\"Schnittpunkt:\", point)\n",
+    "    else:\n",
+    "        print(\"Die Geraden schneiden sich nicht.\")\n",
+    "        return\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "def Zl(Ll,ww=0):\n",
+    "    return np.array([[0,ww *Ll],[-ww*Ll,0]])\n",
+    "\n",
+    "def Zc(Cc,ww=1):\n",
+    "    return np.array([[0,-1/(ww*Cc)],[1/(ww*Cc),0]])\n",
+    "\n",
+    "def Zr(Rr,ww=0):\n",
+    "    return np.eye(2)*Rr "
    ]
   },
   {
@@ -116,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "029ec301-e1f8-4480-9505-4923cca681cb",
    "metadata": {},
    "outputs": [],
@@ -144,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ceed43ff-d0f3-4a0d-81a1-02a69fd46e06",
    "metadata": {},
    "outputs": [
@@ -195,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "23c4afd9-cd53-4ce3-a27d-83e1d042a0e9",
    "metadata": {},
    "outputs": [
@@ -220,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4c01b29e-26b7-459b-8e47-22a10738ef32",
    "metadata": {},
    "outputs": [
@@ -242,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5d67f716-4179-44cb-b82d-18f9d64c1c14",
    "metadata": {},
    "outputs": [
@@ -266,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f5334edf-262c-4032-b835-4ad6656f7897",
    "metadata": {},
    "outputs": [
@@ -311,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "501fd716-8038-426c-860f-8ffd01397b68",
    "metadata": {},
    "outputs": [
@@ -360,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "fd975f3a-bd41-4628-bd47-676c9766a716",
    "metadata": {},
    "outputs": [
@@ -402,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "b86bfb6c-fb2b-4043-9d99-0f6fb79feb25",
    "metadata": {},
    "outputs": [
@@ -416,7 +481,7 @@
        "a"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2e9bca32-70b9-4c58-bdea-ea3f0ef65ce1",
    "metadata": {},
    "outputs": [],
