--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "602420d1-08e4-40d6-82e0-b098e7b1a071",
    "metadata": {},
    "outputs": [],
@@ -97,6 +97,62 @@
     "        print('Test: ',np.matmul(Aa,opt))\n",
     "    return opt\n",
     "\n",
+    "def SpiegProj(A,Pp,vv,verbos=0):\n",
+    "    # in:\n",
+    "    #  A Punkt zu spieglen\n",
+    "    #  P Aufpunkt der Geraden\n",
+    "    #  vv Richtungsvektor der Geraden\n",
+    "    kk=A-Pp\n",
+    "    nn=[[0,-1],[1,0]] @ vv\n",
+    "    hh=( kk@nn)/(nn@nn)*nn\n",
+    "    if verbos>0:\n",
+    "        print('hh',hh)\n",
+    "    As=A-hh\n",
+    "    Ass=A-2*hh\n",
+    "    if verbos>0:\n",
+    "        print('A\\'',As,'A\\'\\'',Ass)\n",
+    "    return [As,Ass]\n",
+    "\n",
+    "def distance(A, U, V, P,verbos=0):\n",
+    "    #In\n",
+    "    # A Aufpunkt auf Ebene\n",
+    "    # U Richtungsvektor 1\n",
+    "    # V Richtungsvektor 2\n",
+    "    # P Punkt ausserhalb der Ebene\n",
+    "    \n",
+    "    ap = P - A\n",
+    "    print(ap)\n",
+    "    n = np.linalg.cross(U,V)\n",
+    "    print(n)\n",
+    "    d = (ap@n)/(np.linalg.norm(n))\n",
+    "    return np.linalg.norm(d)\n",
+    "\n",
+    "def intersection(g, h):\n",
+    " \n",
+    " \n",
+    "    # Gleichungssystem g(s) = h(t)\n",
+    "    equations = [\n",
+    "        g[0] - h[0],\n",
+    "        g[1] - h[1],\n",
+    "        g[2] - h[2]\n",
+    "    ]\n",
+    " \n",
+    "    # Lösen\n",
+    "    solution = sym.solve(equations, (s, t))\n",
+    " \n",
+    "    print(\"Lösung für s und t:\", solution)\n",
+    " \n",
+    "    # Schnittpunkt berechnen (falls Lösung existiert)\n",
+    "    if solution:\n",
+    "        s_val = solution[s]\n",
+    "        point = g.subs(s, s_val)\n",
+    "        print(\"Schnittpunkt:\", point)\n",
+    "    else:\n",
+    "        print(\"Die Geraden schneiden sich nicht.\")\n",
+    "        return\n",
+    "\n",
+    "    return\n",
+    "\n",
     "def Zl(Ll,ww=0):\n",
     "    return np.array([[0,ww *Ll],[-ww*Ll,0]])\n",
     "\n",
@@ -129,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "274f4e7b-71d2-4ec5-8bb7-26fa7bc06802",
    "metadata": {},
    "outputs": [
@@ -167,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -210,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "327f3bd6-888f-4c13-80bf-9478493dbc9e",
    "metadata": {},
    "outputs": [
@@ -248,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "87c18c6c-cb6b-439f-bbfa-97f1b6a3070e",
    "metadata": {},
    "outputs": [
@@ -290,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "c5a957e7-ec6a-4ee0-b757-adff1600bd50",
    "metadata": {},
    "outputs": [],
@@ -314,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "2c9104d1-424f-4648-9bdf-47676c64b3ea",
    "metadata": {},
    "outputs": [
