--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -528,7 +528,9 @@
     "#nn @ P0 # Skalarprodukt, Matrix-Produkt\n",
     "#np.linalg.norm(nn) # Norm\n",
     "#np.linalg.matrix_rank # Rang von Matrix\n",
+    "#np.linalgs.det(A) #Determinante von A ausrechnen\n",
     "#sym.simplify() # einen symbolischen Ausdruck vereinfachen\n",
+    "\n",
     "\n",
     "\n",
     "#mrref(Aa ) # Gauss-Elimination\n",
