--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -239,7 +239,7 @@
    ],
    "source": [
     "# Lösungen ausrechnen.\n",
-    "# Hier muss die Inverse von dem Impedanz Matrix benutzt werden. U = Ztot @ i Umgeformt nach i => Ztot^-1 @ u = i\n",
+    "# Hier muss die Inverse von der Impedanz Matrix benutzt werden. U = Ztot @ i Umgeformt nach i => Ztot^-1 @ u = i\n",
     "A = np.linalg.inv(Zt)@u\n",
     "print(\"Stromvektor:\\n\", A)"
    ]
