--- a/Notebooks/RLC-Netzwerke.ipynb
+++ b/Notebooks/RLC-Netzwerke.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "602420d1-08e4-40d6-82e0-b098e7b1a071",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "274f4e7b-71d2-4ec5-8bb7-26fa7bc06802",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f6848a13-e122-4883-a04b-13f7afbe1ac9",
    "metadata": {},
    "outputs": [
@@ -242,6 +242,71 @@
     "# Hier muss die Inverse von der Impedanz Matrix benutzt werden. U = Ztot @ i Umgeformt nach i => Ztot^-1 @ u = i\n",
     "A = np.linalg.inv(Zt)@u\n",
     "print(\"Stromvektor:\\n\", A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78c8392e-bc64-42af-8d63-a4fcd9294a14",
+   "metadata": {},
+   "source": [
+    "# Amplitude Ausrechnen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2f05c86a-b20b-4ca9-8c98-9d4d86f9e086",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I_Hat:\n",
+      " 8.954377924551078\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"I_Hat:\\n\", np.linalg.norm(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60aad4d2-d7bf-4b58-8a1b-b2056b119afe",
+   "metadata": {},
+   "source": [
+    "# Phasenwinkel Ausrechnen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "24f1c0dc-805d-4dad-818a-b064d6ab0cba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phasenwinkel phi in rad: 0.5761138424810187\n",
+      "Phasenwinkel phi in deg: 33.008891693227085\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stromvektor ins Array schreiben \n",
+    "A = np.array([4.194, 6.456])\n",
+    " \n",
+    "#Phasenwinkel berechnet \n",
+    "phi = np.arctan(A[0]/A[1]) #phi für sin muss (Position [0] / Position [1]) \n",
+    "                            #phi für cos muss (Position [1] / Position [2])\n",
+    " \n",
+    "#phi von rad in deg umrechnen\n",
+    "phi_deg = np.rad2deg(phi)\n",
+    " \n",
+    "print(\"Phasenwinkel phi in rad:\", phi)\n",
+    "print(\"Phasenwinkel phi in deg:\", phi_deg)"
    ]
   },
   {
@@ -266,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "327f3bd6-888f-4c13-80bf-9478493dbc9e",
    "metadata": {},
    "outputs": [
@@ -304,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "87c18c6c-cb6b-439f-bbfa-97f1b6a3070e",
    "metadata": {},
    "outputs": [
@@ -346,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c5a957e7-ec6a-4ee0-b757-adff1600bd50",
    "metadata": {},
    "outputs": [],
@@ -370,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "2c9104d1-424f-4648-9bdf-47676c64b3ea",
    "metadata": {},
    "outputs": [
