fixed grammer error

--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -497,7 +497,7 @@
     "                    [-2, 0, 1]])\n",
     "\n",
     "\n",
-    "# Die Cramerscher Matrix wird erstellt. Hierführ muss der Partikulärer Vektor (das was auf der rechten Seite seteht) \n",
+    "# Die Cramerscher Matrix wird erstellt. Hierführ muss der Partikulärer Vektor (das was auf der rechten Seite steht) \n",
     "# in die Spalte eingesetzt werden, welche man Herausfinden möchte. P1 = 1.te Spalte, P2 = 2.te Spalte P3 = 3.te Spalte \n",
     "Di_KOFF = sym.Matrix([[a**2 - 4*a, 4, 5],\n",
     "                     [2*a - a**2, a, 0],\n",
