--- a/Notebooks/Matrizen_Operationen.ipynb
+++ b/Notebooks/Matrizen_Operationen.ipynb
@@ -497,14 +497,14 @@
     "                    [-2, 0, 1]])\n",
     "\n",
     "\n",
-    "# Die Cramerscher Matrix wird erstellt. Hierführ muss der Partikulärer Vektor (das was auf der rechten Seite steht) \n",
-    "# in die Spalte eingesetzt werden, welche man Herausfinden möchte. P1 = 1.te Spalte, P2 = 2.te Spalte P3 = 3.te Spalte \n",
+    "#Die Cramerscher Matrix wird erstellt. Hierführ muss der Partikulärer Vektor (das was auf der rechten Seite steht) \n",
+    "#In die Spalte eingesetzt werden, welche man herausfinden möchte. P1 = 1. Spalte, P2 = 2. Spalte P3 = 3. Spalte \n",
     "Di_KOFF = sym.Matrix([[a**2 - 4*a, 4, 5],\n",
     "                     [2*a - a**2, a, 0],\n",
     "                     [-2*a , 0, 1]])\n",
     "\n",
     "#Hier wird die Regel angewendet: Det(Di_KOFF)/Det(LGS_KOFF). Dieses Resultat gibt die Lösung\n",
-    "# Mit sym.simplify wird die Lösung noch, falls möglich vereinfacht. \n",
+    "#Mit sym.simplify wird die Lösung noch, falls möglich vereinfacht.\n",
     "sym.simplify(Di_KOFF.det()/LGS_KOFF.det())"
    ]
   },
